# travel-agent

./: .dockerignore  .gitignore  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/web/: .prettierignore  Dockerfile  next.config.ts  package.json
apps/web/src/__tests__/: example.test.ts
contracts/: openapi.yaml
docs/: system-design.md
docs/superpowers/plans/: 2026-06-15-terraform-infra.md
docs/superpowers/specs/: 2026-06-15-terraform-infra-design.md  2026-06-15-travel-service-design.md  2026-06-19-wander-agent-design.md
infra/: backend.hcl.example  backend.tf  iam.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
services/agent/: Dockerfile  pyproject.toml
services/agent/src/agent/: agent.py  main.py
services/agent/tests/: test_health.py
services/listings/: Dockerfile  pyproject.toml
services/listings/src/listings/: chain.py  main.py  models.py  tools.py
services/listings/tests/: test_health.py  test_listings.py  test_tools.py
services/travel/: Dockerfile  pyproject.toml
services/travel/src/travel/: chain.py  main.py  models.py
services/travel/tests/: test_flights.py  test_health.py
services/wander-agent/: Dockerfile  pyproject.toml
services/wander-agent/src/wander_agent/: graph.py  main.py  models.py  state.py
services/wander-agent/src/wander_agent/nodes/: compile_itinerary.py  plan_activities.py  plan_stays.py  plan_travel.py  research_stay.py
services/wander-agent/src/wander_agent/tools/: google_places.py  listings.py  search.py  travel.py
services/wander-agent/tests/: test_health.py  test_itinerary.py  test_tools.py
services/wander-agent/tests/test_nodes/: test_compile_itinerary.py  test_plan_activities.py  test_plan_stays.py  test_plan_travel.py  test_research_stay.py
