[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "ipython>=9.14.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langgraph>=1.2.4",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx2>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
